--- a/Complier/Complier.vcxproj.filters
+++ b/Complier/Complier.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClInclude Include="Scaner.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Parser.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Semanteme.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -26,5 +32,22 @@
     <ClCompile Include="Scaner.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Parser.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Semanteme.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="testParse.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="testFollow.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="testscan.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
